chore: add test text to body elements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
 </body>
-    <header></header>
-    <section></section>
-    <footer></footer>
+    <header>Header</header>
+    <section>Section</section>
+    <footer>Footer</footer>
 </html>
