--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <!--Title-->
     <title>Memory Empire</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--Favicon Old Building-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
 </head>
 <body>
     
