--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Title-->
     <title>Memory Empire</title>
+    <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!--Favicon Old Building-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/favicon.ico">
