chore: adjusted code position and added comments

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
 </head>
 <body>
-    
-</body>
+    <!--Header element-->
     <header>Header</header>
+    <!--Section 1 element-->
     <section>Section</section>
+    <!--Footer Element-->
     <footer>Footer</footer>
+</body>    
 </html>
