build: changed all section elements to main

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <!--Header element-->
     <header>Header</header>
-    <!--Section 1 element-->
-    <section>Section</section>
+    <!--Main element-->
+    <main>Main content/main>
     <!--Footer Element-->
     <footer>Footer</footer>
 </body>    
