chore: fixed faulty main code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--Header element-->
     <header>Header</header>
     <!--Main element-->
-    <main>Main content/main>
+    <main>Main content</main>
     <!--Footer Element-->
     <footer>Footer</footer>
 </body>    
