feat: added adjusted hero image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!--Header element-->
     <header>Header</header>
     <!--Main element-->
-    <main>Main content</main>
+    <main>
+        <section id="landscape"></section>
+    </main>
     <!--Footer Element-->
     <footer>Footer</footer>
 </body>    
