feat: added logo with hyperlink

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 </head>
 <body>
     <!--Header element-->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Memory Empire</h1>
+        </a>
+    </header>
     <!--Main element-->
     <main>
         <section id="landscape"></section>
