feat: added nav element to header

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         <a href="index.html">
             <h1 id="logo">Memory Empire</h1>
         </a>
+        <nav id="menu">
+            <ul>
+                <li>Mnenomics</li>
+                <li>Sign Up</li>
+                <li>Self-Assessment></li>
+            </ul>
+        </nav>
     </header>
     <!--Main element-->
     <main>
