--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <h1 id="logo">Memory Empire</h1>
         </a>
         <nav id="menu">
+            <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
+            <label for="nav-toggle" class="nav-label"></label>
             <ul>
                 <li>Mnenomics</li>
                 <li>Sign Up</li>
