fix: put input into header directly

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
         <a href="index.html">
             <h1 id="logo">Memory Empire</h1>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
+        <label for="nav-toggle" class="nav-label">X</label>
         <nav id="menu">
-            <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
-            <label for="nav-toggle" class="nav-label"></label>
+            
             <ul>
                 <li>Mnenomics</li>
                 <li>Sign Up</li>
-                <li>Self-Assessment></li>
+                <li>Self-Assessment</li>
             </ul>
         </nav>
     </header>
