--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
         <label for="nav-toggle" class="nav-label">X</label>
         <nav id="menu">
-            
             <ul>
                 <li>Mnenomics</li>
                 <li>Sign Up</li>
@@ -39,6 +38,14 @@
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
                 aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
                 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        </section>
+        <section id="quotes">
+            <h2>Get inspired</h2>
+            <div class="quote-box"></div>
+            <div class="quote-box"></div>
+            <div class="quote-box"></div>
+            <div class="quote-box"></div>
+            <div class="image-box"></div>
         </section>
     </main>
     <!--Footer Element-->
