--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
                 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
         </section>
+    <!--Quotes
+    This element will contain another hero image as well as quotes to illustrate the potential of human memory.-->
         <section id="quotes">
             <h2>Get inspired</h2>
             <div class="quote-box"></div>
