fix: changed title and logo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Title-->
-    <title>Memory Empire</title>
+    <title>Memory Gates</title>
     <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!--Favicon Old Building-->
@@ -17,7 +17,7 @@
     <!--Header element-->
     <header>
         <a href="index.html">
-            <h1 id="logo">Memory Empire</h1>
+            <h1 id="logo">Memory Gates</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
         <label for="nav-toggle" class="nav-label">X</label>
