--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <label for="nav-toggle" class="nav-label">X</label>
         <nav id="menu">
             <ul>
-                <li>Mnenomics</li>
-                <li>Sign Up</li>
-                <li>Self-Assessment</li>
+                <li><a href="about.html">Mnenomics</a>></li>
+                <li><a href="assessment.html">Self-Assessment</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
