--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
         </section>
     </main>
     <!--Footer Element-->
-    <footer>Footer</footer>
+    <footer>
+        <ul id="#social-media">
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook! (opens in a new tab)"><i class="fa-brands fa-square-facebook" style="color: #ff5659;"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Visit us on Twitter! (opens in a new tab)"><i class="fa-brands fa-square-x-twitter" style="color: #ff5659;"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Go to our Youtube Channel! (opens in a new tab)"><i class="fa-brands fa-youtube" style="color: #ff5659;"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Follow our Instagram! (opens in a new tab)"><i class="fa-brands fa-square-instagram" style="color: #ff5956;"></i></a></li>
+        </ul>
+    </footer>
 </body>    
 </html>
