--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
         <label for="nav-toggle" class="nav-label">X</label>
-        <nav id="menu">
-            <ul>
-                <li><a href="about.html">Mnenomics</a>></li>
+        <nav>
+            <ul id="menu">
+                <li><a href="about.html">Mnenomics</a></li>
                 <li><a href="assessment.html">Self-Assessment</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
@@ -52,7 +52,7 @@
     </main>
     <!--Footer Element-->
     <footer>
-        <ul id="#social-media">
+        <ul id="social-media">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook! (opens in a new tab)"><i class="fa-brands fa-square-facebook" style="color: #ff5659;"></i></a></li>
             <li><a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Visit us on Twitter! (opens in a new tab)"><i class="fa-brands fa-square-x-twitter" style="color: #ff5659;"></i></a></li>
             <li><a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Go to our Youtube Channel! (opens in a new tab)"><i class="fa-brands fa-youtube" style="color: #ff5659;"></i></a></li>
