feat: added font-awesome kit

--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Follow our Instagram! (opens in a new tab)"><i class="fa-brands fa-square-instagram" style="color: #ff5956;"></i></a></li>
         </ul>
     </footer>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>    
 </html>
