--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 id="logo">Memory Gates</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
-        <label for="nav-toggle" class="nav-label">X</label>
+        <label for="nav-toggle" class="nav-label"><i class="fa-solid fa-torii-gate" style="color: #ff5659;"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="about.html">Mnenomics</a></li>
