--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <label for="nav-toggle" class="nav-label"><i class="fa-solid fa-torii-gate" style="color: #ff5659;"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="about.html">Mnenomics</a></li>
+                <li><a href="about.html" class="active">Mnenomics</a></li>
                 <li><a href="assessment.html">Self-Assessment</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
