--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="about.html">Mnenomics</a></li>
-                <li><a href="assessment.html">Self-Assessment</a></li>
+                <li><a href="assessment.html"class="active">Self-Assessment</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
