--- a/signup.html
+++ b/signup.html
@@ -26,8 +26,8 @@
         <nav>
             <ul id="menu">
                 <li><a href="about.html">Mnenomics</a></li>
-                <li><a href="assessment.html"class="active">Self-Assessment</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="assessment.html">Self-Assessment</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
     </header>
