chore: changed id for 2nd section

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <!--Main element-->
     <main>
         <section id="landscape"></section>
-        <section id="statement">
+        <section id="mnenomics">
             <h2 id="h-statement">Conquer your mind!</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna
