chore: changed 3rd section id

--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
         </section>
         <!--Quotes
     This element will contain another hero image as well as quotes to illustrate the potential of human memory.-->
-        <section id="quotes">
-            <h2>Get inspired</h2>
+        <section id="m_techniques">
+            <h2>The </h2>
             <div class="quote-box"></div>
             <div class="quote-box"></div>
             <div class="quote-box"></div>
