chore: changed orders of div-classes

--- a/about.html
+++ b/about.html
@@ -47,10 +47,11 @@
         <!--Quotes
     This element will contain another hero image as well as quotes to illustrate the potential of human memory.-->
         <section id="m_techniques">
-            <h2>The </h2>
+            <h2>Types of Memory Gates</h2>
             <div class="quote-box"></div>
+            <div class="image-box"></div>
             <div class="quote-box"></div>
-            <div class="quote-box"></div>
+            <div class="image-box"></div>
             <div class="quote-box"></div>
             <div class="image-box"></div>
         </section>
