style: added quill image to html

--- a/about.html
+++ b/about.html
@@ -44,12 +44,12 @@
                 Excepteur sint
                 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
         </section>
-        <!--Quotes
-    This element will contain another hero image as well as quotes to illustrate the potential of human memory.-->
+        <!-- Types of Memory Gates
+        In this section, the main memory techniques will be introduced and illustrated with fitting images. The arrangement should adapt to the device.-->
         <section id="m_techniques">
             <h2>Types of Memory Gates</h2>
             <div class="quote-box"></div>
-            <div class="image-box"></div>
+            <div class="image-box"><img src="assets/images/quill_640.png" alt="A quill writing on a blank sheet of paper."></div>
             <div class="quote-box"></div>
             <div class="image-box"></div>
             <div class="quote-box"></div>
