--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
             <div class="quote-box"></div>
             <div class="image-box"><img src="assets/images/quill_640.png" alt="A quill writing on a blank sheet of paper."></div>
             <div class="quote-box"></div>
-            <div class="image-box"></div>
+            <div class="image-box"><img src="assets/images/pay_640.jpg" alt="A circle made up of white numbers."></div>
             <div class="quote-box"></div>
-            <div class="image-box"></div>
+            <div class="image-box"><img src="assets/images/castle_640.jpg" alt="A castle on a foggy island."></div>
         </section>
     </main>
     <!--Footer Element-->
