--- a/assessment.html
+++ b/assessment.html
@@ -33,7 +33,9 @@
     </header>
     <!--Main element-->
     <main>
-        <section id="landscape"></section>
+        <section id="mountain">
+
+        </section>
         <section id="statement">
             <h2 id="h-statement">Conquer your mind!</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
