fix: corrected mistakes in the code

--- a/assessment.html
+++ b/assessment.html
@@ -34,38 +34,6 @@
     <!--Main element-->
     <main>
         <section id="mountain">
-            <form id="user_request" method="get">
-                <label for="first_name">First Name</label>
-                <input type="text" name="first_name" id="first_name" required>
-                <br>
-                <label for="last_name">Last Name</label>
-                <input type="text" name="last_name" id="last_name" required>
-                <br>
-                <label for="e-mail_address">Email Address</label>
-                <input type="email" name="e-mail_address" id="e-mail_address" required>
-                <br>
-                <label for="request_type">Information Use</label>
-                <select name="request_type" id="request-type" aria-placeholder="Use for..." required>
-                    <option value="school">School</option>
-                    <option value="business">Business</option>
-                    <option value="private">Private</option>
-                    <option value="performance">Performance</select>/option>
-                    <option value="other">Other</option>
-                </select>
-                <label for="description">Please describe the nature of your information.</label>
-                <br>
-                <textarea name="description" id="description" cols="30" rows="6" required></textarea>
-                <br>
-                <label for="interests">Please describe your own personal strenghts and interests.</label>
-                <br>
-                <textarea name="interests" id="interests" cols="30" rows="6" required></textarea>
-                <br>
-                <label for="information">Insert an image or word file for your information.</label>
-                <input type="file" name="information" id="information">
-                <br>
-                <input type="submit" value="Request Gate">
-                <input type="reset" value="Begin Anew">
-            </form>
 
         </section>
         <section id="statement">
@@ -84,10 +52,10 @@
                     <option value="school">School</option>
                     <option value="business">Business</option>
                     <option value="private">Private</option>
-                    <option value="performance">Performance
-                </select>/option>
-                <option value="other">Other</option>
+                    <option value="performance">Performance</option>
+                    <option value="other">Other</option>
                 </select>
+                <br>
                 <label for="description">Please describe the nature of your information.</label>
                 <br>
                 <textarea name="description" id="description" cols="30" rows="6" required></textarea>
