--- a/assessment.html
+++ b/assessment.html
@@ -36,7 +36,7 @@
         <section id="mountain">
 
         </section>
-        <section id="statement">
+        <section id="test">
             <form id="user_request" method="post">
                 <label for="first_name">First Name</label>
                 <input type="text" name="first_name" id="first_name" placeholder="First Name" required>
