--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <nav>
             <ul id="menu">
                 <li><a href="about.html">Mnenomics</a></li>
-                <li><a href="assessment.html">Self-Assessment</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="request.html">Build a Gate</a></li>
             </ul>
         </nav>
     </header>
