--- a/request.html
+++ b/request.html
@@ -26,8 +26,8 @@
         <nav>
             <ul id="menu">
                 <li><a href="about.html">Mnenomics</a></li>
-                <li><a href="assessment.html" class="active">Self-Assessment</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="request.html"class="active">Build a Gate</a></li>
             </ul>
         </nav>
     </header>
