--- a/services.html
+++ b/services.html
@@ -26,8 +26,8 @@
         <nav>
             <ul id="menu">
                 <li><a href="about.html">Mnenomics</a></li>
-                <li><a href="assessment.html">Self-Assessment</a></li>
-                <li><a href="signup.html" class="active">Sign Up</a></li>
+                <li><a href="services.html"class="active">Services</a></li>
+                <li><a href="request.html">Build a Gate</a></li>
             </ul>
         </nav>
     </header>
