feat: added services section and images

--- a/services.html
+++ b/services.html
@@ -46,13 +46,10 @@
         </section>
         <!--Quotes
     This element will contain another hero image as well as quotes to illustrate the potential of human memory.-->
-        <section id="quotes">
-            <h2>Get inspired</h2>
-            <div class="quote-box"></div>
-            <div class="quote-box"></div>
-            <div class="quote-box"></div>
-            <div class="quote-box"></div>
-            <div class="image-box"></div>
+        <section id="services">
+            <div><img src="assets/images/kyoto_640.jpg" alt="Inside view of a row of Torii Gates."></div>
+            <div><img src="assets/images/brain_640.jpg" alt="Brain split into 'logical' and 'creative half'."></div>
+            <div><img src="assets/images/man_640.jpg" alt="Silhouette of two mountainclimbers."></div>
         </section>
     </main>
     <!--Footer Element-->
