feat: added cover text to landscape section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
     </header>
     <!--Main element-->
     <main>
-        <section id="landscape"></section>
+        <section id="landscape">
+            <div id="cover-text">
+                <h3>Improve your Memory!</h3>
+                <h3>Build Mnemonic Gates.</h3>
+            </div>
+        </section>
         <section id="statement">
             <h2 id="h-statement">Conquer your mind!</h2>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
