style: added style rule for service hero image

--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
     </header>
     <!--Main element-->
     <main>
-        <section id="landscape"></section>
+        <section id="fox"></section>
         <section id="statement">
             <h2 id="h-statement">Conquer your mind!</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
