--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     </header>
     <!--Main element-->
     <main>
-        <section id="landscape"></section>
+        <section id="ronin"></section>
         <section id="mnenomics">
             <h2 id="h-statement">Conquer your mind!</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
