style: added h4 to about.html

--- a/about.html
+++ b/about.html
@@ -33,7 +33,12 @@
     </header>
     <!--Main element-->
     <main>
-        <section id="ronin"></section>
+        <section id="ronin">
+            <div id="cover-text">
+                <h4>Torii are everywhere...</h4>
+                <h4>They will guide your way...</h4>
+            </div>
+        </section>
         <section id="mnenomics">
             <h2 id="h-statement">Conquer your mind!</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
