test: add cover text to about - issue with block element

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <!--Main element-->
     <main>
         <section id="ronin">
-            <div id="cover-text">
+            <div id="cover-text-a">
                 <h4>Torii are everywhere...</h4>
                 <h4>They will guide your way...</h4>
             </div>
