--- a/services.html
+++ b/services.html
@@ -47,9 +47,11 @@
         <!--Quotes
     This element will contain another hero image as well as quotes to illustrate the potential of human memory.-->
         <section id="services">
-            <div>
-                <img src="assets/images/kyoto_640.jpg" alt="Inside view of a row of Torii Gates.">
-                <br>
+            <div id="guidance">
+                <div>
+                    <img src="assets/images/kyoto_1280.jpg" alt="Inside view of a row of Torii Gates.">
+                </div>
+                <div>
                 <h4>Memory Guidance</h4>
                 <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -60,24 +62,30 @@
                 Excepteur sint
                 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <br>
+                </div>
             </div>
-            <div>
-                <img src="assets/images/brain_640.jpg" alt="Brain split into 'logical' and 'creative half'.">
-                <br>
-                <h4>Find your style!</h4>
-                <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <br>
+            <div div="creativity">
+                <div>    
+                    <img src="assets/images/brain_1280.jpg" alt="Brain split into 'logical' and 'creative half'.">
+                </div>
+                <div>
+                    <h4>Find your Style!</h4>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis
+                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        Excepteur sint
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <br>
+                </div>
             </div>
-            <div>
-                <img src="assets/images/men_1280.jpg" alt="Silhouette of two mountainclimbers.">
-                <br>
+            <div id="training">
+                <div>
+                    <img src="assets/images/men_1280.jpg" alt="Silhouette of two mountainclimbers.">
+                </div>
+                <div>
                 <h4>Mnemonics Training</h4>
                 <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -87,7 +95,7 @@
                     aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     Excepteur sint
                     occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <br>
+                </div>
             </div>
         </section>
     </main>
