fix: changed spelling mistake

--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
                 <br>
                 </div>
             </div>
-            <div div="creativity">
+            <div id="creativity">
                 <div>    
                     <img src="assets/images/brain_1280.jpg" alt="Brain split into 'logical' and 'creative half'.">
                 </div>
