fix: added class element to position text divs

--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
                 <div>
                     <img src="assets/images/kyoto_1280.jpg" alt="Inside view of a row of Torii Gates.">
                 </div>
-                <div>
+                <div class="explanation-box">
                 <h4>Memory Guidance</h4>
                 <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -68,7 +68,7 @@
                 <div>    
                     <img src="assets/images/brain_1280.jpg" alt="Brain split into 'logical' and 'creative half'.">
                 </div>
-                <div>
+                <div  class="explanation-box">
                     <h4>Find your Style!</h4>
                     <br>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -85,7 +85,7 @@
                 <div>
                     <img src="assets/images/men_1280.jpg" alt="Silhouette of two mountainclimbers.">
                 </div>
-                <div>
+                <div  class="explanation-box">
                 <h4>Mnemonics Training</h4>
                 <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
