fix: rearranged content to match request.html

--- a/about.html
+++ b/about.html
@@ -49,38 +49,51 @@
                 Excepteur sint
                 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
         </section>
+        <br>
         <!-- Types of Memory Gates
         In this section, the main memory techniques will be introduced and illustrated with fitting images. The arrangement should adapt to the device.-->
         <section id="m_techniques">
             <h2>Types of Memory Gates</h2>
             <br>
-            <div class="quote-box">
-                <h3>The Story Gate</h3>
-                <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <div class="m_summary">
+                <div>
+                    <img src="assets/images/quill_640.png" alt="A quill writing on a blank sheet of paper.">
+                </div>
+                <div class="quote-box">
+                    <h3>The Story Gate</h3>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                     dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     consequat.</p>
+                </div>
             </div>
-            <div><img src="assets/images/quill_640.png" alt="A quill writing on a blank sheet of paper."></div>
-            <div class="quote-box">
-                <h3>The Number Gate</h3>
-                <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
-            </div>
-            <div><img src="assets/images/pay_640.jpg" alt="A circle made up of white numbers."></div>
-            <div class="quote-box">
-                <h3>The Palace Gate</h3>
-                <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <div class="m_summary">
+                <div>
+                    <img src="assets/images/pay_640.jpg" alt="A circle made up of white numbers.">
+                </div>
+                <div class="quote-box">
+                    <h3>The Number Gate</h3>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                     dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     consequat.</p>
+                </div>
+            </div> 
+            <div class="m_summary">
+                <div>
+                    <img src="assets/images/castle_640.jpg" alt="A castle on a foggy island.">
+                </div>
+                <div class="quote-box">
+                    <h3>The Palace Gate</h3>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.</p>
+                </div>
             </div>
-            <div><img src="assets/images/castle_640.jpg" alt="A castle on a foggy island."></div>
         </section>
     </main>
     <!--Footer Element-->
