fix: renamed div class to fit content

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                 <div>
                     <img src="assets/images/quill_640.png" alt="A quill writing on a blank sheet of paper.">
                 </div>
-                <div class="quote-box">
+                <div class="m-explanation">
                     <h3>The Story Gate</h3>
                     <br>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -72,7 +72,7 @@
                 <div>
                     <img src="assets/images/pay_640.jpg" alt="A circle made up of white numbers.">
                 </div>
-                <div class="quote-box">
+                <div class="m-explanation">
                     <h3>The Number Gate</h3>
                     <br>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -85,7 +85,7 @@
                 <div>
                     <img src="assets/images/castle_640.jpg" alt="A castle on a foggy island.">
                 </div>
-                <div class="quote-box">
+                <div class="m-explanation">
                     <h3>The Palace Gate</h3>
                     <br>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
