chore: erased unnecessary section / elements

--- a/confirmation.html
+++ b/confirmation.html
@@ -26,7 +26,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="about.html">Mnenomics</a></li>
-                <li><a href="services.html" class="active">Services</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="request.html">Build a Gate</a></li>
             </ul>
         </nav>
@@ -34,82 +34,6 @@
     <!--Main element-->
     <main>
         <section id="fox"></section>
-        <section id="statement">
-            <h2 id="h-statement">Conquer your mind!</h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-        </section>
-        <!--Quotes
-    This element will contain another hero image as well as quotes to illustrate the potential of human memory.-->
-        <section id="services">
-            <div id="guidance">
-                <div>
-                    <img src="assets/images/kyoto_1280.jpg" alt="Inside view of a row of Torii Gates.">
-                </div>
-                <div class="explanation-box">
-                    <h4>Memory Guidance</h4>
-                    <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo
-                        consequat. Duis
-                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur.
-                        Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                    <br>
-                </div>
-            </div>
-            <div id="creativity">
-                <div>
-                    <img src="assets/images/brain_1280.jpg" alt="Brain split into 'logical' and 'creative half'.">
-                </div>
-                <div class="explanation-box">
-                    <h4>Find your Style!</h4>
-                    <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo
-                        consequat. Duis
-                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur.
-                        Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                    <br>
-                </div>
-            </div>
-            <div id="training">
-                <div>
-                    <img src="assets/images/men_1280.jpg" alt="Silhouette of two mountainclimbers.">
-                </div>
-                <div class="explanation-box">
-                    <h4>Mnemonics Training</h4>
-                    <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo
-                        consequat. Duis
-                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur.
-                        Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                </div>
-            </div>
-        </section>
     </main>
     <!--Footer Element-->
     <footer>
