feat: added link to confirmation.html

--- a/request.html
+++ b/request.html
@@ -71,7 +71,9 @@
                 <label for="information">Insert an image or word file for your information.</label>
                 <input type="file" name="information" id="information">
                 <br>
-                <input type="submit" value="Request Gate" class="form-button">
+                <a href="confirmation.html">
+                    <input type="submit" value="Request Gate" class="form-button">
+                </a>
                 <input type="reset" value="Begin Anew" class="form-button">
         </section>
        
