feat: added divs with cover text

--- a/confirmation.html
+++ b/confirmation.html
@@ -33,7 +33,16 @@
     </header>
     <!--Main element-->
     <main>
-        <section id="fox"></section>
+        <section id="fox">
+            <div id="r_gratitude">
+                <h2>Thank your for submitting your request!</h2>
+            </div>
+            <div id="r_gratitude_2">
+                <h4>We will send you an confirmation mail shortly.
+                    Click on "Memory Gates to return to the main page. 
+                </h4>
+            </div>
+        </section>
     </main>
     <!--Footer Element-->
     <footer>
