fix: removed trailing slash

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="index.html">
             <h1 id="logo">Memory Gates</h1>
         </a>
-        <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-label"><i class="fa-solid fa-torii-gate" style="color: #ff5659;"></i></label>
         <nav>
             <ul id="menu">
