feat: added cover text for services.html

--- a/services.html
+++ b/services.html
@@ -33,7 +33,12 @@
     </header>
     <!--Main element-->
     <main>
-        <section id="fox"></section>
+        <section id="fox">
+            <div id="cover-text-b">
+                <h4>Are you ready?</h4>
+                <h4>Follow my lead!</h4>
+            </div>
+        </section>
         <section id="statement">
             <h2 id="h-statement">Conquer your mind!</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
