--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
             </div>
         </section>
         <section id="statement">
-            <h2 id="h-statement">Conquer your mind!</h2>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+            <h2 id="h-statement">Find your way through your memory!</h2>
+                <p> In Shintoism, the Japanese local religion, Torii serve as special gateways. 
+                    They connect the land of the living with the realm of the gods. Nowadays,
+                    you can find Torii anywhere in Japan. In midst of a city, before shrines,in midst of deep forest 
+                    even in the water. Every gate has its own characteristics which makes it memorable.
+                    With the help of the memorable imagery of the Torii gates, we at Memory Gate want to help you
+                    improve your memory. Let us set up Torii for your mind for all information you need. Who knows?
+                    At some point, you might be able to build these gates yourself.</p>
         </section>
     <!--Quotes
     This element will contain another hero image as well as quotes to illustrate the potential of human memory.-->
