fix: removed method and added link to confirmation

--- a/request.html
+++ b/request.html
@@ -34,7 +34,7 @@
     <!--Main element-->
     <main>
         <section id="mountain">
-            <form id="user_request" method="get">
+            <form id="user_request" action="confirmation.html">
                 <label for="first_name">First Name</label>
                 <input type="text" name="first_name" id="first_name" class="text-line" placeholder="First Name" required>
                 <br>
