fix: added form closing tag

--- a/request.html
+++ b/request.html
@@ -75,6 +75,7 @@
                     <input type="submit" value="Request Gate" class="form-button" onclick="location.href='confirmation.html'">
                 </a>
                 <input type="reset" value="Begin Anew" class="form-button">
+            </form>
         </section>
        
     </main>
