fix: replaced last two inputs for buttons

--- a/request.html
+++ b/request.html
@@ -72,12 +72,11 @@
                 <input type="file" name="information" id="information">
                 <br>
                 <a href="confirmation.html">
-                    <input type="submit" value="Request Gate" class="form-button" onclick="location.href='confirmation.html'">
+                    <button type="submit" class="form-button">Request Gate</button>
                 </a>
-                <input type="reset" value="Begin Anew" class="form-button">
+                <button type="reset" class="form-button">Begin Anew</button>
             </form>
-        </section>
-       
+        </section> 
     </main>
     <!--Footer Element-->
     <footer>
