fix: moved i-color to css-file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 id="logo">Memory Gates</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-label"><i class="fa-solid fa-torii-gate" style="color: #ff5659;"></i></label>
+        <label for="nav-toggle" class="nav-label"><i class="fa-solid fa-torii-gate"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="about.html">Mnenomics</a></li>
@@ -61,10 +61,10 @@
     <!--Footer Element-->
     <footer>
         <ul id="social-media">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook! (opens in a new tab)"><i class="fa-brands fa-square-facebook" style="color: #ff5659;"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Visit us on Twitter! (opens in a new tab)"><i class="fa-brands fa-square-x-twitter" style="color: #ff5659;"></i></a></li>
-            <li><a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Go to our Youtube Channel! (opens in a new tab)"><i class="fa-brands fa-youtube" style="color: #ff5659;"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Follow our Instagram! (opens in a new tab)"><i class="fa-brands fa-square-instagram" style="color: #ff5956;"></i></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook! (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Visit us on Twitter! (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Go to our Youtube Channel! (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Follow our Instagram! (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
     </footer>
 
