chore: copy pasted meta elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Title-->
     <title>Memory Gates</title>
+    <!--Description-->
+    <meta name="description" content="Main webpage creating Memory Gates for important information">
+    <!--Keywords-->
+    <meta name="keywords" content="Mnemonics, Torii, Memory, Learning, Japan">
+    <!--Name of Author-->
+    <meta name="author" content="Sebastian Bucher">
     <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!--Favicon Old Building-->
